--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,16 +6,7 @@ ARG PROJECT_NAME=ic
 RUN useradd -m $USERNAME \
     && apt-get update \
     && apt-get upgrade -y \
-    && apt-get install -y \
-        coreutils \
-        sudo \
-        git \
-        gcc \
-        g++ \
-        make \
-        cmake \
-        python3 \
-        python3-pip \
+    && apt-get install -y coreutils sudo git gcc g++ make cmake \
     && usermod -aG sudo user \
     && echo "$USERNAME ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 
